[KARAF-6624] Add JDK13 & JDK14 support
(cherry picked from commit 1a5699993eb411aee590e2f5e11d32bfc7f3e42a)